 NEWS/ChangeLog for JRI
--------------------------

0.5-3	(under development)
    o	fixed changed by the Win64 support which broke some other OSes by
	using sign extension when converting to long storage.

0.5-2	2010-04-28
    o	fixed handling of NAs in strings - they are now correctly
	converted to <null>s on the Java side.

	IMPORTANT: previously NAs would come as the string "NA"
	from R which is incorrect since it is not distinguishable from
	a literal "NA" string. Code that deals with NAs must be prepared
	to receive nulls in string arrays (note that nulls where
	correctly converted to NA string, it's just that incoming
	string were not converted).

	(Thanks to Stephan Wahlbrink for pointing out the inconsistency)

    o	multiple fixes to Windows support: common command line
	arguments are now correctly processed, sub-architectures are
	supported, Win64 is now also supported

0.5-1	2010-03-16
   o	API 1.10: rniAssign now returns boolean to denote success/failure

   o	numerous bug fixes and additions

0.5-0	2009-08-22
    o	API 1.9: added rniPreserve, rniRelease, rniParentEnv, rniFindVar,
	         rniListEnv, rniSpecialObject, rniPrintValue,
		 rniGetRawArray, rniPutRawArray, rniGetAttrNames methods
		 added jriLoaded field (boolean)

    o	new REngine-based API (org.rosuda.REngine.JRI.JRIEngine)
	has been created - this allows the same code to interface
	JRI or Rserve without re-compilation

	Note: the JAR files are currently shipped separately from the JRI
	installation and can be obtained from
	http://rforge.net/JRI/files/

    o	proxy references are now preserved until finalized

    o	if jri.ignore.ule=yes property is set, JRI will not abort on
	failing to load the JRI library (UnsatisfiedLinkException).
	This can be used by GUIs to display a more meaningful message
	instead of abort. The jriLoaded flag is false in that case.


0.4-2
    o	declare string encoding as UTF-8 and convert incoming strings
	to UTF-8 if possible (R >= 2.7.0 required).
