@@ -5,6 +5,11 @@
     o	fixed changed by the Win64 support which broke some other OSes by
 	using sign extension when converting to long storage.
 
+    o	avoid the use of the sign of pointers for signaling. Note
+	that rniEval() now returns 0 on error and not -1 or -2. The
+	old behavior was undocumented (and dangerous) and thus should
+	not be relied upon. (fixes #172)
+
 0.5-2	2010-04-28
     o	fixed handling of NAs in strings - they are now correctly
 	converted to <null>s on the Java side.
